Bug 183428 - korganizer default color selection for appointments and tasks does not work
Summary: korganizer default color selection for appointments and tasks does not work
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-02-06 14:45 UTC by Jannis Menn
Modified: 2009-06-15 19:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jannis Menn 2009-02-06 14:45:09 UTC
Version:           4.1.0 (using 4.1.3 (KDE 4.1.3), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.27-11-generic

When I change the default color for appointments in the settings dialogue, this has no effect. The appointments are still shown in a light-green color, no matter what color I set in the settings. Same goes for tasks.

This happens in Korganizer 4.1.0 (in Kubuntu Intrepid) and 4.2 RC1 (in Kubuntu Jaunty Alpha4).
Comment 1 Stefan Esterer 2009-02-12 13:48:44 UTC
The same problem on debian lenny (testing) with the packages of kde42.debian.net.
Comment 2 Allen Winter 2009-02-14 15:40:33 UTC
SVN commit 925928 by winterz:

Remove the unused "default color for events" configuration setting.

Colors are set from either the event's category color or from its
calendar resource, or both.

See the Agenda View or Month View tabs under the Views configuration page.
BUG: 183428


 M  +3 -3      kocorehelper.cpp  
 M  +0 -5      kocorehelper.h  
 M  +5 -1      koprefs.cpp  
 M  +1 -0      koprefs.h  
 M  +0 -5      koprefsdialog.cpp  
 M  +0 -5      korganizer.kcfg  


WebSVN link: http://websvn.kde.org/?view=rev&revision=925928
Comment 3 Jannis Menn 2009-03-05 15:27:38 UTC
I dont think this is a satisfying solution. If "only category color" is selected (or category color outside, resource-color inside) in the view-properties, it is still not possible to change this kinda ugly green, if no category is selected.
Comment 4 Jan-Willem van de Meent 2009-06-15 13:29:39 UTC
I'd like to just second Jannis Menn's opinion on this. If you assign colors by category, there is no way to choose the default color for appointments that do not have a category -- as will be the case with some ical feeds. It'd be nice if the setting could be re-enabled for this reason.
Comment 5 Allen Winter 2009-06-15 18:50:20 UTC
sorry, I apparently forgot to add more info to this bug report.

In KDE4.2 there is now a setting for "no category" color.

So, this bug is actually fixed.
Comment 6 Jan-Willem van de Meent 2009-06-15 19:28:57 UTC
Would you mind pointing me to it? Must be daft but am running 4.2.4 and have not managed to spot it yet!
Comment 7 Allen Winter 2009-06-15 19:58:53 UTC
hmm.. sorry, I must have added this for 4.3.
whoopsie.  still closed, in any event.

it will be in the Colors and Fonts setting.