Remove the unused "default color for events" configuration setting.

Colors are set from either the event's category color or from its
calendar resource, or both.

See the Agenda View or Month View tabs under the Views configuration page.
BUG: 183428

svn path=/trunk/KDE/kdepim/; revision=925928