kocorehelper.h
@@ -40,11 +40,6 @@ class KOCoreHelper : public KOrg::CoreHelper
     KOCoreHelper() {}
     virtual ~KOCoreHelper() {}
 
-    virtual QColor defaultEventColor()
-    {
-      return KOPrefs::instance()->agendaCalendarItemsEventsBackgroundColor();
-    }
-
     virtual QColor categoryColor( const QStringList &cats );
 
     virtual QString holidayString( const QDate &dt );
