koprefs.cpp
@@ -79,7 +79,6 @@ KOPrefs::KOPrefs() : KOPrefsBase()
 
   agendaTimeLabelsFontItem()->setDefaultValue( mDefaultAgendaTimeLabelsFont );
   monthViewFontItem()->setDefaultValue( mDefaultMonthViewFont );
-  agendaCalendarItemsEventsBackgroundColorItem()->setDefaultValue( mDefaultCategoryColor );
 }
 
 KOPrefs::~KOPrefs()
@@ -292,6 +291,11 @@ void KOPrefs::usrWriteConfig()
   timeScaleConfig.writeEntry( "Timescale Timezones", timeScaleTimezones() );
 
   KPimPrefs::usrWriteConfig();
+}
+
+QColor KOPrefs::defaultCategoryColor() const
+{
+  return mDefaultCategoryColor;
 }
 
 void KOPrefs::setCategoryColor( const QString &cat, const QColor &color )
